2009-11-19  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/7035231>
        Support closed caption in <video> element

        * media/media-captions-expected.txt: Added.
        * media/media-captions.html: Added.
        * media/content/counting-captioned.mov: Added.

        * platform/gtk/Skipped:
        * platform/mac-leopard/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/win/Skipped:
            Skipped on platforms that don't support closed captions yet.

2009-11-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Gustavo Noronha Silva.

        Web Inspector: Implement "show inspector" in WebKit GTK
        API and enable console tests.

        https://bugs.webkit.org/show_bug.cgi?id=31669

        * platform/gtk/Skipped:

2009-11-19  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        Some tests in fast/css-generated-content can be dumpAsText test
        https://bugs.webkit.org/show_bug.cgi?id=31663

        * fast/css-generated-content/absolute-position-inside-inline-expected.txt: Added.
        * fast/css-generated-content/absolute-position-inside-inline.html:
        * fast/css-generated-content/hit-test-generated-content-expected.txt: Added.
        * fast/css-generated-content/hit-test-generated-content.html:
        * fast/css-generated-content/positioned-background-hit-test-crash-expected.txt: Added.
        * fast/css-generated-content/positioned-background-hit-test-crash.html:
        * fast/css-generated-content/spellingToolTip-assert-expected.txt: Added.
        * fast/css-generated-content/spellingToolTip-assert.html:
        * platform/mac/fast/css-generated-content/absolute-position-inside-inline-expected.checksum: Removed.
        * platform/mac/fast/css-generated-content/absolute-position-inside-inline-expected.png: Removed.