@@ -374,6 +374,7 @@ accessibility/aria-readonly.html
 accessibility/aria-roles.html
 accessibility/aria-tables.html
 accessibility/aria-tab-roles.html
+accessibility/aria-used-on-image-maps.html
 accessibility/button-press-action.html
 accessibility/canvas.html
 accessibility/document-attributes.html
